--- a/casasamaritanonorte/Views/Home/About.cshtml
+++ b/casasamaritanonorte/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <!-- Start Bradcaump area -->
 <div class="ht__bradcaump__area">
     <div class="ht__bradcaump__container">
-        <img src="~/Imagens/6.png" alt="bradcaump images">
+        <img src="~/Imagens/banner-8.jpg" alt="bradcaump images">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
