--- a/casasamaritanonorte/Views/Shared/_Layout.cshtml
+++ b/casasamaritanonorte/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
             </li>
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="#">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Rendimentos</span>
                 </a>
